# Instacart-consumer-behavior-analysic

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run_api.py  test_api.py  test_system.py
.github/workflows/: ci.yml  docker.yml  release.yml
configs/: train_lstm.yaml  train_tcn.yaml  train_xgb.yaml
data/features/: baseline_feature_info.json  item_features.parquet  popular_items_baseline.parquet  user_candidate_set.parquet
data/processed/: products_enriched.parquet  users_rfm.parquet
data/splits/: X_test_baseline.parquet  X_train_baseline.parquet  y_test_baseline.parquet  y_train_baseline.parquet
docs/: 01_eda_summary.md  baseline_results.md  feature_schema.md  seq_models_report_20251129_021850.md
models/archived/: feature_importance_20251128_195211.parquet
notebooks/: 01_EDA_RFM.ipynb  02_feature_engineering.ipynb  03_baseline_xgb.ipynb  04_seq_models_tcn_lstm.ipynb
src/: main.py
src/data/: etl_rfm.py  ingest.py
src/features/: __init__.py  build_item_features.py  build_user_features.py  build_user_item_features.py  sequence_builder.py
src/models/: __init__.py  baseline_xgb_trainer.py  lstm_trainer.py  tcn_trainer.py
src/pipelines/: __init__.py  train.py
src/serving/: __init__.py  api.py  api_backup.py  inference.py  model_loader.py
src/utils/: __init__.py  config.py  io.py  logging.py  metrics.py
streamlit_app/: app.py
